configuracion de router, header y componentes etc

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Redexodia</title>
+  <title>Red Exodia | Asesoría para músicos independientes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="assets/cropped-redexodia-favicon-32x32.png" sizes="32x32">
+  <link rel="icon" href="assets/cropped-redexodia-favicon-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="assets/cropped-redexodia-favicon-180x180.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="bg-black">
   <app-root></app-root>
 </body>
 </html>
